# WyrmKeep-API

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC_COMPLIANCE_REPORT.md  test_sse.js
examples/: test_server.rs
migrations/: 20240101000001_create_tenants.sql  20240101000002_create_contracts.sql  20240101000003_create_audits.sql  20240101000004_create_findings.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  supabase_types.rs
src/auth/: jwt.rs  middleware.rs
src/db/: mod.rs
src/models/: audit.rs  contract.rs  finding.rs  mod.rs  sidecar.rs  tenant.rs  vuln_ontology.rs
src/routes/: audits.rs  contracts.rs  findings.rs  health.rs  memory.rs  mod.rs  tenants.rs
src/services/: cognee_client.rs  job_queue.rs  mod.rs  pattern.rs  pattern_tests.rs  pipeline.rs  pipeline_tests.rs  sidecar_client.rs
