[package]
name = "wyrmkeep-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "timeout", "request-id", "util"] }
sha2 = "0.10"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
jsonwebtoken = "9"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
thiserror = "2"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cognee-lib = "*"
futures = "0.3"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dashmap = "5"
dotenv = "0.15"
